Fix compilation errors in migration system